adding filters to report
